# tinygpt

./: .dockerignore  .gitignore  AGENTS.md  config.py  fun.ipynb  main.html  main.ipynb  models.py  pyproject.toml  tokenizer.py  train_fun.py
berkeley/: fun.ipynb  main.html  main.ipynb  models_import.py
core/: AGENTS.md  __init__.py  artifacts.py  config.py  generation.py  model.py
evals/: AGENTS.md  CORE_INTEGRATION_CONTRACT.md  README.md  generation_quality.py  pyproject.toml
evals/configs/: README.md  decoding-v0.1.json
evals/datasets/: README.md  story-v0.1.jsonl
evals/eval_suite/: __init__.py  case_evaluators.py  contracts.py  decoding_config.py  quality_metrics.py  report.py  runner.py  schema.py
evals/results/v0.1/mock-demo/demo-run-001/: report.md  results.jsonl  summary.json
evals/scripts/: run_demo.py
evals/tests/: mock_generation.py  test_case_evaluators.py  test_decoding_config.py  test_quality_metrics_reuse.py  test_report.py  test_runner.py  test_schema.py
fine_tuning/: cleanse_prompts.py  colab.ipynb  demo.py  fine_tune_v2.py  helpers.py  instruction_dataset.py  template_prompts.py
plans/: 01-stabilize-training-pipeline.md  02-build-initial-evaluation-suite.md  03-serve-and-trace-cloud-run.md
service/: AGENTS.md  Dockerfile  README.md  pyproject.toml
service/tests/: conftest.py  test_chat.py  test_generator.py  test_health.py  test_limits.py  test_tracing.py
service/tinygpt_service/: __init__.py  bundle_cli.py  config.py  errors.py  generator.py  limits.py  main.py  routes.py  schemas.py  tracing.py
service/tinygpt_service/static/: app.js  index.html  style.css
training/: AGENTS.md  plot.py  pyproject.toml  results.py  tokenizer.py  train.py  training.py  utils.py
training/fine_tuning/: AGENTS.md  README.md  __init__.py  build_instruction_dataset.py  colab.ipynb  controlled_prompts.py  demo.py  fill_instruction_prompts.py  fine_tune.py  helpers.py  lora.py  template_prompts.py  todo.md
