[project]
name = "tinygpt-evals"
version = "0.1.0"
description = "Local behavioral evaluation suite for tinygpt story generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eval_suite*"]
