[project]
name = "tinygpt-service"
version = "0.1.0"
description = "Minimal FastAPI chat wrapper and Arize tracing for TinyGPT (Plan 3)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
# OTLP export to Arize. Only required when TINYGPT_TRACING_ENABLED=true.
tracing = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
# Real TinyGPT inference and bundle tooling.
model = [
    "torch>=2.11.0",
    "tokenizers>=0.22.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tinygpt-build-bundle = "tinygpt_service.bundle_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tinygpt_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
